# CARSI

./: .dockerignore  .dockerignore.web  .env.example  .env.prod.example  .gitignore  .mcp.json  .prettierignore  CHANGELOG.md  CLAUDE.md  COMPONENT-DEMO.md  CONTRIBUTING.md  Dockerfile  Dockerfile.web  Justfile  README.md  SECURITY.md  app.yaml  claude.md  docker-compose.yml  eslint.config.cjs  middleware.ts  next.config.ts  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  project.yml  tsconfig.json  turbo.json  vercel.json  vitest.config.ts  vitest.setup.ts
apps/backend/: .env.example  Dockerfile  fly.toml  pyproject.toml
apps/backend/alembic/versions/: 002_learning_pathways.py  004_course_ideas.py  005_rpl_portfolio.py  006_add_lms_bundles.py  007_carsi_hub_phase1.py  008_youtube_channels.py  012_rls_lms_tables.py  013_course_tier.py  016_course_embeddings.py  017_quiz_ai_explanations.py  018_churn_scores.py  023_password_reset_tokens.py
apps/backend/scripts/: seed_scoping_quoting_course.py
apps/backend/scripts/fixtures/: scoping_quoting_course.json
apps/backend/src/api/: deps_lms.py  main.py
apps/backend/src/auth/: jwt.py
apps/backend/src/config/: database.py  settings.py
apps/backend/src/db/: lms_models.py  models.py
apps/backend/src/services/: email_service.py  google_drive.py  nexus_connector.py  pdf_certificate.py  podcast_rss_sync.py  quiz_explanation_service.py  youtube_sync.py
apps/backend/src/verification/: independent_verifier.py
apps/backend/src/worker/: tasks.py
apps/backend/tests/: conftest.py  test_agents.py  test_orchestrator_verification.py  test_prd_agents.py  test_prd_routes.py  test_smoke.py
apps/backend/tests/api/: test_agent_dashboard.py  test_lms_admin.py  test_lms_ai_builder.py  test_lms_auth_patch.py  test_lms_categories.py  test_lms_course_ideas.py  test_lms_courses.py  test_lms_credentials.py  test_lms_explanations.py  test_lms_lessons.py  test_lms_migration.py  test_lms_notes.py  test_lms_pathways.py  test_lms_payments.py  test_lms_pdf.py  test_lms_progress.py  test_lms_quiz.py  test_lms_recommendations.py  test_lms_rpl.py  test_revenue.py  test_task_queue.py
apps/backend/tests/contracts/: test_prd_provider.py
apps/backend/tests/integration/: test_memory_integration.py  test_supabase_rls.py
apps/backend/tests/rag/: test_search.py
apps/backend/tests/security/: test_api_security.py
apps/backend/tests/services/: test_email_service.py  test_google_drive.py  test_nexus_connector.py
(+615 files in other folders)
