[project]
name = "backend"
version = "0.1.0"
description = "LangGraph Agent Backend"
requires-python = ">=3.12"

dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Database (PostgreSQL + SQLAlchemy)
    "sqlalchemy>=2.0.0",
    "asyncpg>=0.29.0",  # Async PostgreSQL driver
    "psycopg2-binary>=2.9.0",  # Sync PostgreSQL driver (for migrations)
    "pgvector>=0.3.0",  # Vector similarity search
    "alembic>=1.13.0",  # Database migrations

    # Authentication
    "python-jose[cryptography]>=3.3.0",  # JWT tokens
    "passlib[bcrypt]>=1.7.0",  # Password hashing

    # AI Models (All Optional - Ollama used by default via HTTP)
    "anthropic>=0.40.0",  # Optional - Claude API
    "google-generativeai>=0.8.0",  # Optional - Gemini API
    "openai>=1.50.0",  # Optional - OpenAI API
    # Note: Ollama provider uses httpx (already included) for local AI

    # Core
    "pydantic>=2.9.0",
    "pydantic-settings>=2.6.0",
    "python-dotenv>=1.0.0",
    "httpx>=0.27.0",
    "pyyaml>=6.0.0",
    "structlog>=24.4.0",
    "python-multipart>=0.0.12",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.13.0",
    "ruff>=0.7.0",
    "httpx>=0.27.0",
]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]

[tool.mypy]
python_version = "3.12"
ignore_missing_imports = true
warn_redundant_casts = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = [
    "-v",
    "--strict-markers",
    "--tb=short",
    "--ignore=tests/contracts",
    "--ignore=tests/performance",
    "--ignore=tests/integration",
]
markers = [
    "asyncio: mark test as async",
    "integration: mark test as integration test",
    "unit: mark test as unit test",
    "performance: mark test as performance test",
]

[tool.coverage.run]
source = ["src"]
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/site-packages/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = false
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "@abstractmethod",
]

[tool.coverage.html]
directory = "htmlcov"
